เพิ่มการปรับแต่งใน CSS

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -13,7 +13,28 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div>
+    <div class="nav-text">
+      <h1>Travel Blog</h1>
+    </div>
+
+    <div class="card">
+      <h2>คาเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2040</h2>
+      <img src="./image.jpeg" alt="Testpic">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis soluta vero temporibus? Placeat, nobis
+        maxime! Fugit hic, incidunt recusandae ullam eos voluptatem praesentium repellat iusto aut nobis aperiam. Ex,
+        quibusdam.</p>
+    </div>
+
+    <div class="card">
+      <h2>สถานที่น่าเที่ยว 10 อันดับ 2140</h2>
+      <img src="./image.jpeg" alt="Testpic">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis soluta vero temporibus? Placeat, nobis
+        maxime! Fugit hic, incidunt recusandae ullam eos voluptatem praesentium repellat iusto aut nobis aperiam. Ex,
+        quibusdam.</p>
+    </div>
+
+  </div>
 </body>
 
 </html>
