เพิ่มการปรับแต่งใน CSS

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
-</body>
+    <!-- <div style="display: flex; justify-content: center;">
+      <h1>TechUp</h1>
+    </div> -->
 
+    <div class="t-lightgrey">
+      <div class="t-black">
+        <div class="t-crimson">
+          <div class="t-khaki">
+            <h1>TechUp</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</body>
 </html>
