แก้ไขให้ง่ายขึ้น

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,19 +10,15 @@
 </head>
 
 <body>
-    <!-- <div style="display: flex; justify-content: center;">
-      <h1>TechUp</h1>
-    </div> -->
-
-    <div class="t-lightgrey">
-      <div class="t-black">
-        <div class="t-crimson">
-          <div class="t-khaki">
-            <h1>TechUp</h1>
-          </div>
+  <div class="t-lightgrey" >
+    <div class="box t-black">
+      <div class="box t-crimson">
+        <div class="box t-khaki">
+          <h1>TechUp</h1>
         </div>
       </div>
     </div>
-
+  </div>
 </body>
+
 </html>
